tests/baselines/reference/usingDeclarationsForOfShadowing(target=esnext).errors.txt
usingDeclarationsForOfShadowing.ts(20,7): error TS2481: Cannot initialize outer scoped variable 'y' in the same scope as block scoped declaration 'y'.


==== usingDeclarationsForOfShadowing.ts (1 errors) ====
    class Foo {}
    
    // Error when downleveling: using declaration shadowed by loop body declaration  
    for (using foo of [{ [Symbol.dispose]() {} }]) {
      const foo = new Foo();
    }
    
    // OK: different names
    for (using bar of [{ [Symbol.dispose]() {} }]) {
      const baz = new Foo();
    }
    
    // Error when downleveling: using declaration shadowed by loop body declaration  
    for (using x of [{ [Symbol.dispose]() {} }]) {
      let x = 1;
    }
    
    // Error when downleveling: using declaration shadowed by loop body declaration
    for (using y of [{ [Symbol.dispose]() {} }]) {
      var y = "test";
          ~
!!! error TS2481: Cannot initialize outer scoped variable 'y' in the same scope as block scoped declaration 'y'.
    }